--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
             </div>
         </div>
         <hr>
-        <p class="Copyright">Copyright 2022-  Bairugani Sahana Reddy & Bindu Sree </p>
+        <p class="Copyright">Copyright 2022-  Bairugani Sahana Reddy  </p>
     </div>
 </div>
 <!------ js for toggle menu-------->
